--- a/experCSS/exper.css
+++ b/experCSS/exper.css
@@ -12,7 +12,28 @@
 .experCSS_layerDom_layer .container .progress { position:absolute; top:50%; left:50%; margin:-25px 0 0 -25px; width:50px; height:50px; background-color:#222222; border-radius:10px; }
 .experCSS_layerDom_layer .container .framei { margin:0; padding:0; width:100%; height:100%; border:none; }
 
+/*
 .experCSS_scrollView_uiBarContainer { position:absolute; top:0; right:0; width:15px; cursor:pointer; }
 .experCSS_scrollView_uiBar { position:absolute; right:5px; margin-top:5px; width:2px; border:1px solid #555555; border-radius:10px; background-color:#707070; }
+*/
 
-.experCSS_toast_alternate { position:fixed; bottom:20px; left:50%; padding:2px 10px 4px 10px; text-align:center; line-height:1.6em; font-size:1em; color:#ffffff; background-color:#444444; 0px 5px 8px rgba(0,0,0,0.3); }
+.experCSS_scrollView_uiBarContainer { 
+	position:absolute; top:0; right:0; width:5px; cursor:pointer; background-color:#eeeeee;
+}
+.experCSS_scrollView_uiBarContainer.needless { display:none; }
+.experCSS_scrollView_uiBarContainer.disable { display:none; }
+.experCSS_scrollView_uiBar { 
+	position:absolute; right:0px; width:5px; background-color:#707070; 
+}
+.experCSS_scrollView_uiBarContainer:hover .experCSS_scrollView_uiBar { 
+	background-color:#ff0000;
+}
+.experCSS_scrollView_uiBar.activate { 
+	background-color:#ff0000;
+}
+
+.experCSS_toast_alternate { 
+	position:fixed; bottom:20px; left:50%; padding:2px 10px 4px 10px; 
+	text-align:center; line-height:1.6em; font-size:1em; color:#ffffff; 
+	background-color:#444444; 0px 5px 8px rgba(0,0,0,0.3); 
+}
