--- a/experCSS/exper.css
+++ b/experCSS/exper.css
@@ -7,12 +7,22 @@
 .experCSS_layerDom_layer { position:absolute; top:0; left:0; width:100%; }
 .experCSS_layerDom_layer .dim { position:absolute; top:0; left:0; width:100%; height:100%; background-color:#000000; }
 .experCSS_layerDom_layer .container { position:absolute; top:0; left:0; overflow:hidden; }
-.experCSS_layerDom_layer .container .content {}
-.experCSS_layerDom_layer .container .closeBtn { position:fixed; top:0; right:0; width:50px; height:50px; background-color:#000000; visibility:hidden; }
-.experCSS_layerDom_layer .container .progress { position:absolute; top:50%; left:50%; margin:-25px 0 0 -25px; width:50px; height:50px; background-color:#222222; border-radius:10px; }
+.experCSS_layerDom_layer .container .content { visibility:hidden; }
+.experCSS_layerDom_layer .container .closeBtn { 
+	position:fixed; top:10px; right:10px; width:40px; height:40px; visibility:hidden; cursor:pointer; 
+	background:url("./images/EXLayerDOM/close_btn.gif") no-repeat;
+}
+.experCSS_layerDom_layer .container .closeBtn:hover { 
+	background:url("./images/EXLayerDOM/close_btn_hover.gif") no-repeat;
+}
+.experCSS_layerDom_layer .container .progress { 
+	position:absolute; top:50%; left:50%; margin:-18px 0 0 -18px; width:36px; height:36px; 
+	border-radius:5px; background:#222222 url("./images/EXLayerDOM/progress_loading.gif") no-repeat 50% 50%; 
+}
 .experCSS_layerDom_layer .container .framei { margin:0; padding:0; width:100%; height:100%; border:none; }
 
 /*
+.experCSS_layerDom_layer .container { position:absolute; top:0; left:0; overflow:hidden; width:100% !important; height:100% !important; top:0 !important; left:0 !important; margin:0 !important; }
 .experCSS_scrollView_uiBarContainer { position:absolute; top:0; right:0; width:15px; cursor:pointer; }
 .experCSS_scrollView_uiBar { position:absolute; right:5px; margin-top:5px; width:2px; border:1px solid #555555; border-radius:10px; background-color:#707070; }
 */
