ScrollView bug fix

--- a/experCSS/exper.css
+++ b/experCSS/exper.css
@@ -1,29 +1,29 @@
 @charset "utf-8";
 
 .exUIKit_layerDom_body {}
-.exUIKit_layerDom_body .append {}
-.exUIKit_layerDom_body .remove { display:none; width:0px; height:0px; overflow:hidden; }
+	.exUIKit_layerDom_body .append {}
+	.exUIKit_layerDom_body .remove { display:none; width:0px; height:0px; overflow:hidden; }
 .exUIKit_layerDom_layer { position:absolute; top:0; left:0; width:100%; }
-.exUIKit_layerDom_layer .dim { position:absolute; top:0; left:0; width:100%; height:100%; background-color:#000000; }
-.exUIKit_layerDom_layer .container { position:absolute; top:0; left:0; overflow:hidden; }
-.exUIKit_layerDom_layer .container .content { visibility:hidden; }
-.exUIKit_layerDom_layer .container .closeBtn { position:fixed; top:10px; right:10px; width:40px; height:40px; visibility:hidden; cursor:pointer; background:url("./images/EXLayerDOM/close_btn.gif") no-repeat; }
-.exUIKit_layerDom_layer .container .closeBtn:hover {  background:url("./images/EXLayerDOM/close_btn_hover.gif") no-repeat; }
-.exUIKit_layerDom_layer .container .progress { position:absolute; top:50%; left:50%; margin:-18px 0 0 -18px; width:36px; height:36px; border-radius:5px; background:#222222 url("./images/EXLayerDOM/progress_loading.gif") no-repeat 50% 50%; }
-.exUIKit_layerDom_layer .container .framei { margin:0; padding:0; width:100%; height:100%; border:none; }
+	.exUIKit_layerDom_layer .dim { position:absolute; top:0; left:0; width:100%; height:100%; background-color:#000000; }
+	.exUIKit_layerDom_layer .container { position:absolute; top:0; left:0; overflow:hidden; }
+	.exUIKit_layerDom_layer .container .content { visibility:hidden; }
+	.exUIKit_layerDom_layer .container .closeBtn { position:fixed; top:10px; right:10px; width:40px; height:40px; visibility:hidden; cursor:pointer; background:url("./images/EXLayerDOM/close_btn.gif") no-repeat; }
+	.exUIKit_layerDom_layer .container .closeBtn:hover {  background:url("./images/EXLayerDOM/close_btn_hover.gif") no-repeat; }
+	.exUIKit_layerDom_layer .container .progress { position:absolute; top:50%; left:50%; margin:-18px 0 0 -18px; width:36px; height:36px; border-radius:5px; background:#222222 url("./images/EXLayerDOM/progress_loading.gif") no-repeat 50% 50%; }
+	.exUIKit_layerDom_layer .container .framei { margin:0; padding:0; width:100%; height:100%; border:none; }
 
 
 .exUIKit_scrollView { position:absolute; top:0; right:0; width:5px; cursor:pointer; background-color:#eeeeee; -webkit-transition:width 0.1s; }
-.exUIKit_scrollView.needless { display:none; }
-.exUIKit_scrollView.disable { display:none; }
-.exUIKit_scrollView .uiBar { position:absolute; right:0px; width:100%; background-color:#707070; }
-.exUIKit_scrollView.activate { width:15px; }
-.exUIKit_scrollView.activate .uiBar { background-color:#ff0000; }
-.exUIKit_scrollView:hover { width:15px; }
-.exUIKit_scrollView:hover .uiBar { background-color:#ff0000; }
-.exUIKit_scrollView .uiArrow { position:absolute; top:0; left:0; }
-.exUIKit_scrollView .uiArrow.up { }
-.exUIKit_scrollView .uiArrow.down { top:auto; bottom:0; }
+	.exUIKit_scrollView.needless { display:none; }
+	.exUIKit_scrollView.disable { display:none; }
+	.exUIKit_scrollView .uiBar { position:absolute; right:0px; width:100%; background-color:#707070; }
+	.exUIKit_scrollView.activate { width:15px; }
+	.exUIKit_scrollView.activate .uiBar { background-color:#ff0000; }
+	.exUIKit_scrollView:hover { width:15px; }
+	.exUIKit_scrollView:hover .uiBar { background-color:#ff0000; }
+	.exUIKit_scrollView .uiArrow { position:absolute; top:0; left:0; }
+	.exUIKit_scrollView .uiArrow.up { }
+	.exUIKit_scrollView .uiArrow.down { top:auto; bottom:0; }
 
 .exUIKit_toast { 
 	font-family:"Malgun Gothic" , "Arial" , "verdana" , "Helvetica" , sans-serif;
@@ -31,66 +31,56 @@
 	line-height:1.4em; font-size:1em; color:#ffffff; background-color:#444444; 
 	box-shadow: 0px 5px 8px rgba(0,0,0,0.2); text-shadow:0px 1px 1px rgba(0,0,0, 0.1);
 }
-.exUIKit_toast .head_title {  }
-.exUIKit_toast.error { background-color:#dd2a44; }
-.exUIKit_toast.warning { background-color:#e17d07; }
-.exUIKit_toast.success { background-color:#3e98e5; }
-
-/*
-.exUIKit_checkBox {}
-.exUIKit_checkBox:hover { background-color:#ff0000; }
-.exUIKit_checkBox.original { position:absolute; left:-99999px; }
-.exUIKit_checkBox.checkBtn {}
-.exUIKit_checkBox.checkBtn .checkBox { display:inline-block; width:17px; height:17px; vertical-align:middle; background:url("./images/EXCheckBox/normal.png") 0 0 no-repeat; }
-.exUIKit_checkBox.checkBtn .checkBox.checked {  background:url("./images/EXCheckBox/checked.png") 0 0 no-repeat; }
-.exUIKit_checkBox.checkBtn.disabled .checkBox { background-image:url("./images/EXCheckBox/disabled.png"); }
-.exUIKit_checkBox.checkBtn.disabled .checkBox.checked { background-image:url("./images/EXCheckBox/disabled_checked.png"); }
-*/
+	.exUIKit_toast .head_title {  }
+	.exUIKit_toast.error { background-color:#dd2a44; }
+	.exUIKit_toast.warning { background-color:#e17d07; }
+	.exUIKit_toast.success { background-color:#3e98e5; }
 
 .exUIKit_checkBox { visibility:hidden; }
-.exUIKit_checkBox.original { position:absolute; left:-99999px; }
-.exUIKit_checkBox.checkBtn { visibility:visible; display:inline-block; vertical-align:middle; width:16px; height:16px; cursor:pointer; }
-.exUIKit_checkBox.checkBtn .checkBox { display:inline-block; width:14px; height:14px; border:1px solid #d0d0d0; background:#ffffff url("./images/EXCheckBox/checked.gif") no-repeat center top; 
-	-webkit-transition: color,background-color 0.2s;
-	-moz-transition: color,background-color 0.2s;
-}
-.exUIKit_checkBox.checkBtn .checkBox.checked { border-color:#444444; background-color:#444444; background-position:center bottom; }
-.exUIKit_checkBox.checkBtn.disabled .checkBox { border-color:#bbbbbb; background-color:#d8d8d8; }
-.exUIKit_checkBox.checkBtn.disabled .checkBox.checked { background-position:center bottom; }
+	.exUIKit_checkBox.original { position:absolute; left:-99999px; }
+	.exUIKit_checkBox.checkBtn { visibility:visible; display:inline-block; vertical-align:middle; width:16px; height:16px; cursor:pointer; }
+	.exUIKit_checkBox.checkBtn .checkBox { display:inline-block; width:14px; height:14px; border:1px solid #d0d0d0; background:#ffffff url("./images/EXCheckBox/checked.gif") no-repeat center top; 
+		-webkit-transition: color,background-color 0.2s;
+		-moz-transition: color,background-color 0.2s;
+	}
+	.exUIKit_checkBox.checkBtn .checkBox.checked { border-color:#444444; background-color:#444444; background-position:center bottom; }
+	.exUIKit_checkBox.checkBtn.disabled .checkBox { border-color:#bbbbbb; background-color:#d8d8d8; }
+	.exUIKit_checkBox.checkBtn.disabled .checkBox.checked { background-position:center bottom; }
 
-/*
-.exUIKit_radioGroup {}
-.exUIKit_radioGroup.original { position:absolute; left:-9000px; }
-.exUIKit_radioGroup.radioBtn { }
-.exUIKit_radioGroup.radioBtn .radio { display:inline-block; margin-top:-1px; width:19px; height:19px; vertical-align:middle; background:url("../../experCSS/images/EXRadioButton/normal.png") 0 0 no-repeat; }
-.exUIKit_radioGroup.radioBtn .radio.checked { background:url("../../experCSS/images/EXRadioButton/checked.png") 0 0 no-repeat; }
-.exUIKit_radioGroup.radioBtn.disabled .radio { background-image:url("../../experCSS/images/EXRadioButton/disabled.png"); }
-.exUIKit_radioGroup.radioBtn.disabled .radio.checked { background-image:url("../../experCSS/images/EXRadioButton/checked.png"); }
-*/
 .exUIKit_radioGroup { visibility:hidden; }
-.exUIKit_radioGroup.original { position:absolute; left:-9000px; }
-.exUIKit_radioGroup.radioBtn { visibility:visible; display:inline-block; vertical-align:bottom; width:16px; height:16px; cursor:pointer; }
-.exUIKit_radioGroup.radioBtn .radio { display:inline-block; width:14px; height:14px; border:1px solid #d0d0d0; border-radius:7px; background:#ffffff url("./images/EXRadioButton/check.png") no-repeat center top; 
-	-webkit-transition: color,background-color 0.2s; 
-	-moz-transition: color,background-color 0.2s;
-}
-.exUIKit_radioGroup.radioBtn .radio.checked { border-color:#444444; background-color:#444444; background-position:center bottom; }
-.exUIKit_radioGroup.radioBtn.disabled .radio { border-color:#bbbbbb; background-color:#d8d8d8; }
-.exUIKit_radioGroup.radioBtn.disabled .radio.checked { background-position:center bottom; }
+	.exUIKit_radioGroup.original { position:absolute; left:-9000px; }
+	.exUIKit_radioGroup.radioBtn { visibility:visible; display:inline-block; vertical-align:bottom; width:16px; height:16px; cursor:pointer; }
+	.exUIKit_radioGroup.radioBtn .radio { display:inline-block; width:14px; height:14px; border:1px solid #d0d0d0; border-radius:7px; background:#ffffff url("./images/EXRadioButton/check.png") no-repeat center top; 
+		-webkit-transition: color,background-color 0.2s; 
+		-moz-transition: color,background-color 0.2s;
+	}
+	.exUIKit_radioGroup.radioBtn .radio.checked { border-color:#444444; background-color:#444444; background-position:center bottom; }
+	.exUIKit_radioGroup.radioBtn.disabled .radio { border-color:#bbbbbb; background-color:#d8d8d8; }
+	.exUIKit_radioGroup.radioBtn.disabled .radio.checked { background-position:center bottom; }
 
 .exUIKit_selectBox { visibility:hidden; height:26px; line-height:26px; font-family:"Arial" , "Malgun Gothic"; font-size:14px; vertical-align:middle; }
-.exUIKit_selectBox.original { position:absolute; left:-9999px; }
-.exUIKit_selectBox.selectBox { visibility:visible; display:inline-block; position:relative; vertical-align:middle; z-index:1; cursor:pointer; }
-.exUIKit_selectBox.selectBox .selection { display:inline-block; position:absolute; overflow:hidden; text-indent:8px; border:1px solid #d0d0d0; background:#ffffff url("./images/EXSelectBox/arrow.gif") no-repeat right bottom; -webkit-transition: background 0.3s; }
-.exUIKit_selectBox.selectBox .optionContainer { padding:5px 0; margin-top:1px;  position:absolute; overflow:hidden;  border:1px solid #cccccc; background: #ffffff; box-shadow:4px 4px 10px rgba(0,0,0,0.1); }
-.exUIKit_selectBox.selectBox .optionScrollView { overflow:hidden; height:93px; }
-.exUIKit_selectBox.selectBox .optionScrollView .exUIKit_scrollView { right:-3px; }
-.exUIKit_selectBox.selectBox .optionGroup { padding:0;  margin:0; overflow:hidden; line-height:30px; width:100%; }
-.exUIKit_selectBox.selectBox .optionGroup .option {  margin:1px 5px 0 5px; text-indent:8px; overflow:hidden; text-overflow:ellipsis; white-space:nowrap;  -webkit-transition: color,background-color 0.2s; }
-.exUIKit_selectBox.selectBox .optionGroup .option:hover { color:#ffffff; background-color:#9c9ea0; }
-.exUIKit_selectBox.selectBox .optionGroup .option.selected { color:#ffffff; background-color:#3399ff; }
-.exUIKit_selectBox.selectBox.open { z-index:2; }
-.exUIKit_selectBox.selectBox.open .selection { color:#ffffff; border:1px solid #444444; background-color:#444444; background-position:right top; }
-.exUIKit_selectBox.selectBox.open .optionContainer { display:block !important; border-top:none; }
-.exUIKit_selectBox.selectBox.disabled { cursor:auto; }
-.exUIKit_selectBox.selectBox.disabled .selection { color:#999999; background-color:#f5f5f5; }
+	.exUIKit_selectBox.original { position:absolute; left:-9999px; }
+	.exUIKit_selectBox.selectBox { visibility:visible; display:inline-block; position:relative; vertical-align:middle; z-index:1; cursor:pointer; }
+	.exUIKit_selectBox.selectBox .selection { display:inline-block; position:absolute; overflow:hidden; text-indent:8px; border:1px solid #d0d0d0; background:#ffffff url("./images/EXSelectBox/arrow.gif") no-repeat right bottom; -webkit-transition: background 0.3s; }
+	.exUIKit_selectBox.selectBox .optionContainer { padding:5px 0; margin-top:1px;  position:absolute; overflow:hidden;  border:1px solid #cccccc; background: #ffffff; box-shadow:4px 4px 10px rgba(0,0,0,0.1); }
+	.exUIKit_selectBox.selectBox .optionScrollView { overflow:hidden; height:93px; }
+	.exUIKit_selectBox.selectBox .optionScrollView .exUIKit_scrollView { right:-3px; }
+	.exUIKit_selectBox.selectBox .optionGroup { padding:0;  margin:0; overflow:hidden; line-height:30px; width:100%; }
+	.exUIKit_selectBox.selectBox .optionGroup .option {  margin:1px 5px 0 5px; text-indent:8px; overflow:hidden; text-overflow:ellipsis; white-space:nowrap;  -webkit-transition: color,background-color 0.2s; }
+	.exUIKit_selectBox.selectBox .optionGroup .option:hover { color:#ffffff; background-color:#9c9ea0; }
+	.exUIKit_selectBox.selectBox .optionGroup .option.selected { color:#ffffff; background-color:#3399ff; }
+	.exUIKit_selectBox.selectBox.open { z-index:2; }
+	.exUIKit_selectBox.selectBox.open .selection { color:#ffffff; border:1px solid #444444; background-color:#444444; background-position:right top; }
+	.exUIKit_selectBox.selectBox.open .optionContainer { display:block !important; border-top:none; }
+	.exUIKit_selectBox.selectBox.disabled { cursor:auto; }
+	.exUIKit_selectBox.selectBox.disabled .selection { color:#999999; background-color:#f5f5f5; }
+
+.exUIKit_fileButton { display:inline-block; position:relative; width:400px; height:24px; line-height:24px; font-size:12px; overflow:hidden; }
+	.exUIKit_fileButton:hover {}
+	.exUIKit_fileButton:hover .fileButton { background-color:#3399ff; }
+		.exUIKit_fileButton .fileButton { display:inline-block; width:90px; height:100%; text-indent:9px; text-align:center; color:#ffffff; background:#444444 url("./images/EXFileButton/normal.gif") no-repeat 6px 50%; }
+		.exUIKit_fileButton .fileText { display:inline-block; width:300px; }
+		.exUIKit_fileButton .fileOriginal { display:none;
+			display:inline-block; position:absolute; top:0; left:0; width:100%; height:100%; cursor:pointer;
+			opacity:0; filter : alpha(opacity=0); filter : progid:DXImageTransform.Microsoft.Alpha(Opacity=0); -ms-filter : progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+		}
